--- a/LinearConvolutionUsingDFT&IDFT.html
+++ b/LinearConvolutionUsingDFT&IDFT.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="page.css">
-    <title>DFT</title>
+    <title>Linear Convolution</title>
 </head>
 <body>
     <div class="main">
@@ -28,65 +28,90 @@ See also
         <div class="interface-section">
             <div class="container pt-2 input-block">
                 <br>
-                <h3>Enter the sequence :</h3>
-                <input id="a" placeholder="1,2,3,4" onchange="dft()"/>
+                <h3>Enter the first sequence :</h3>
+                <input id="a" placeholder="1,2,3,4"/>
+                <br><br>
+                <h3>Enter the second sequence :</h3>
+                <input id="b" placeholder="1,2,3,4"/>
+                <br><br>
+                <button type="submit" class="btn btn-warning" onclick="lcdi()">Submit</button>
                 <br><br>
                 <h4 id="resp"></h4>
                 <br><br>
-                <h4 class="plot-title" id="mag-title">Magnitude Plot of DFT sequence :</h4><br>
-                <canvas class="outputSequence" id="magResp"></canvas>
+                <h4 class="plot-title" id="input-title">Input sequence :</h4><br>
+                <canvas class="outputSequence" id="inputResp"></canvas>
                 <br><br>
-                <h4 class="plot-title" id="ph-title">Phase Plot of DFT sequence :</h4><br>
-                <canvas class="outputSequence" id="phResp"></canvas><br><br>
+                <h4 class="plot-title" id="impulse-title">Impulse sequence :</h4><br>
+                <canvas class="outputSequence" id="impulseResp"></canvas>
+                <br><br>
+                <h4 class="plot-title" id="output-title">Ouput sequence :</h4><br>
+                <canvas class="outputSequence" id="outputResp"></canvas><br><br>
             </div>
         </div>
     </div>
     <script src="https://pagecdn.io/lib/mathjs/10.5.3/math.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script type="text/javascript">
-        function dft() {
-            const a = document.getElementById("a").value.split(",");
-            const at = a.map((val) => parseFloat(val));
-            const N = a.length;
+        function dft(a,N) {
             const ak = [];
-            const real = [];
-            const img = [];
             for(let k=0;k<N;k++) {
                 realSum = 0;
                 imgSum = 0;
                 for(let n=0;n<N;n++) {
-                    realSum += at[n]*Math.cos(2*Math.PI*k*n/N).toFixed(2);
-                    imgSum += -(at[n]*Math.sin(2*Math.PI*k*n/N).toFixed(2));
+                    realSum += a[n]*Math.cos(2*Math.PI*k*n/N).toFixed(2);
+                    imgSum += -(a[n]*Math.sin(2*Math.PI*k*n/N).toFixed(2));
                 }
-                real.push(realSum);
-                img.push(imgSum);
-                ak.push(realSum + "+ " + "i" + "(" + imgSum + ")");
+                ak.push([realSum,imgSum]);
             }
-            const magResp = [];
-            const phResp = [];
-            for(let j=0; j<N; j++) {
-                magResp.push(Number(Math.sqrt(Math.pow(real[j],2) + Math.pow(img[j],2)).toFixed(2)));
-                ph = Number((Math.atan(img[j]/real[j])*180/Math.PI).toFixed(2));
-                if (real[j]>=0 & img[j]>=0) {
-                    phResp.push(ph);
-                } else if (real[j]<0 & img[j]<0) {
-                    phResp.push(ph-180);
-                } else {
-                    phResp.push(ph + 180);
+            return ak;
+        }
+        function idft(dftSequence,N) {
+            const idftSequence = [];
+            for(let n=0; n<N; n++){
+                realSum = 0;
+                for(let k=0; k<N; k++) {
+                    mul = math.multiply(dftSequence[k],String(Math.cos(2*Math.PI*k*n/N)) + "+" + String(Math.sin(2*Math.PI*k*n/N)) + "i");
+                    realSum += Number(mul["re"]);
                 }
+                idftSequence.push(Math.round(realSum/N));
             }
-            document.getElementById("resp").innerText=ak;
-            const xyMagValues = [];
+            return idftSequence;
+        }
+        function lcdi() {
+            const x = document.getElementById("a").value.split(",");
+            const h = document.getElementById("b").value.split(",");
+            const m = x.length;
+            const n = h.length;
+            const N = m+n-1;
+            const xt = x.map((val) => parseFloat(val));
+            const ht = h.map((val) => parseFloat(val));
+            for(let a=0; a<N-m; a++) {
+                xt.push(0);
+            }
+            for(let b=0; b<N-n; b++) {
+                ht.push(0);
+            }
+            const xk = dft(xt,N);
+            const hk = dft(ht,N);
+            const yk = [];
+            for(let i=0; i<N; i++) {
+                ac = math.complex(xk[i][0],xk[i][1]);
+                bc = math.complex(hk[i][0],hk[i][1]);
+                yk.push(math.multiply(ac,bc));
+            }
+            const yt = idft(yk,N);
+            document.getElementById("resp").innerText = yt;
+            const xyInputValues = [];
             for(let j=0; j<N; j++) {
-                xyMagValues.push({x:j,y:magResp[j]});
+                xyInputValues.push({x:j,y:xt[j]});
             }
-            new Chart("magResp", {
+            new Chart("inputResp", {
                 type: "scatter",
                 data: {
                     datasets: [{
                         pointRadius: 4,
                         pointBackgroundColor: "rgb(0,0,255)",
-                        data: xyMagValues
+                        data: xyInputValues
                     }]
                 },
                 options: {
@@ -94,27 +119,48 @@ See also
                 }
             });
 
-            const xyPhValues = [];
+            const xyImpulseValues = [];
             for(let j=0; j<N; j++) {
-                xyPhValues.push({x:j,y:phResp[j]});
+                xyImpulseValues.push({x:j,y:ht[j]});
             }
-            new Chart("phResp", {
+            new Chart("impulseResp", {
                 type: "scatter",
                 data: {
                     datasets: [{
                         pointRadius: 4,
                         pointBackgroundColor: "rgb(0,0,255)",
-                        data: xyPhValues
+                        data: xyImpulseValues
                     }]
                 },
                 options: {
                     legend: {display: false}
                 }
             });
-            document.getElementById("magResp").style.display ="block";
-            document.getElementById("mag-title").style.display ="block";
-            document.getElementById("phResp").style.display ="block";
-            document.getElementById("ph-title").style.display ="block";
+
+            const xyOutputValues = [];
+            for(let j=0; j<N; j++) {
+                xyOutputValues.push({x:j,y:yt[j]});
+            }
+            new Chart("outputResp", {
+                type: "scatter",
+                data: {
+                    datasets: [{
+                        pointRadius: 4,
+                        pointBackgroundColor: "rgb(0,0,255)",
+                        data: xyOutputValues
+                    }]
+                },
+                options: {
+                    legend: {display: false}
+                }
+            });
+
+            document.getElementById("inputResp").style.display ="block";
+            document.getElementById("input-title").style.display ="block";
+            document.getElementById("impulseResp").style.display ="block";
+            document.getElementById("impulse-title").style.display ="block";
+            document.getElementById("outputResp").style.display ="block";
+            document.getElementById("output-title").style.display ="block";
 
         }
     </script>
