--- a/DFT.html
+++ b/DFT.html
@@ -10,26 +10,26 @@
 </head>
 <body>
     <div class="main">
-        <div class="theory">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore cupiditate voluptatibus excepturi, laboriosam cumque accusamus suscipit nam officiis voluptas ipsa error. Officiis, vel doloremque explicabo impedit vero dolores voluptatibus. Temporibus.
-            The Lorem ipsum text is derived from sections 1.10.32 and 1.10.33 of Cicero's 'De finibus bonorum et malorum'.[7][8] The physical source may have been the 1914 Loeb Classical Library edition of De finibus, where the Latin text, presented on the left-hand (even) pages, breaks off on page 34 with "Neque porro quisquam est qui do-" and continues on page 36 with "lorem ipsum ...", suggesting that the galley type of that page was mixed up to make the dummy text seen today.[1]
-
-The discovery of the text's origin is attributed to Richard McClintock, a Latin scholar at Hampden–Sydney College. McClintock connected Lorem ipsum to Cicero's writing sometime before 1982 while searching for instances of the Latin word consectetur, which was rarely used in classical literature.[2] McClintock first published his discovery in a 1994 letter to the editor of Before & After magazine, contesting the editor's earlier claim that Lorem ipsum held no meaning.[2]
-
-The relevant section of Cicero as printed in the source is reproduced below with fragments used in Lorem ipsum highlighted. Letters in brackets were added to Lorem ipsum and were not present in the source text:
-
-[32] Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum[d] exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? [D]Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? [33] At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
-
-What follows is H. Rackham's translation, as printed in the Loeb Classical Library edition, with words at least partially represented in Lorem ipsum highlighted:[8]
-
-[32] But I must explain to you how all this mistaken idea of reprobating pleasure and extolling pain arose. To do so, I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure? [33] On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammeled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.
-
-See also
+        <div class="container">
+        <div class="theory">
+            <h2 style="text-align: center;">Discrete Fourier Transform</h2><br>
+            <p>In mathematics, the <b>discrete Fourier transform (DFT)</b> converts a finite sequence of equally-spaced samples of a function into a same-length sequence of equally-spaced samples of the <abbr title="In mathematics, the discrete-time Fourier transform (DTFT) is a form of Fourier analysis that is applicable to a sequence of values." style="color: blue; border-bottom: 2px blue">DTFT</abbr> which is a complex-valued function of frequency. The interval at which the DTFT is sampled is the reciprocal of the duration of the input sequence.</p>
+            <p>The DFT is therefore said to be a frequency domain representation of the original input sequence. If the original sequence spans all the non-zero values of a function, its DTFT is continuous (and periodic), and the DFT provides discrete samples of one cycle. If the original sequence is one cycle of a periodic function, the DFT provides all the non-zero values of one DTFT cycle.</p>
+            <p>The DFT is the most important discrete transform, used to perform Fourier analysis in many practical applications. In digital signal processing, the function is any quantity or signal that varies over time, such as the pressure of a sound wave, a radio signal, or daily temperature readings, sampled over a finite time interval. In image processing, the samples can be the values of pixels along a row or column of a raster image. The DFT is also used to efficiently solve partial differential equations, and to perform other operations such as convolutions or multiplying large integers.</p>
+            <p> The formula used for the calculation of DFT of an input sequence is :</p>
+            <img src="assets/DFT_formula.svg" class="mx-auto d-block" alt="DFT formula" width="400px">
+            <h3>Example :</h3><br>
+            <img src="assets/Screenshot 2022-07-15 152209.png" alt="DFT example" class="mx-auto d-block"><br><br>
+            <p>The step-by-step values for the provided input is shown below :</p>
+            <table id="exp">
+            </table><br><br>
+        </div>
         </div>
         <div class="interface-section">
             <div class="container pt-2 input-block">
                 <br>
-                <h3>Enter the sequence :</h3>
-                <input id="a" placeholder="1,2,3,4" onchange="dft()"/>
+                <h3>Enter the input sequence :</h3>
+                <input id="a" placeholder="1,2,3,4..." onchange="dft()"/>
                 <br><br>
                 <h4 id="resp"></h4>
                 <br><br>
@@ -45,76 +45,109 @@ See also
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script type="text/javascript">
         function dft() {
-            const a = document.getElementById("a").value.split(",");
-            const at = a.map((val) => parseFloat(val));
-            const N = a.length;
-            const ak = [];
-            const real = [];
-            const img = [];
-            for(let k=0;k<N;k++) {
-                realSum = 0;
-                imgSum = 0;
-                for(let n=0;n<N;n++) {
-                    realSum += at[n]*Math.cos(2*Math.PI*k*n/N).toFixed(2);
-                    imgSum += -(at[n]*Math.sin(2*Math.PI*k*n/N).toFixed(2));
-                }
-                real.push(realSum);
-                img.push(imgSum);
-                ak.push(realSum + "+ " + "i" + "(" + imgSum + ")");
+        const a = document.getElementById("a").value.split(",");
+        const at = a.map((val) => parseFloat(val));
+        const N = a.length;
+        const ak = [];
+        const real = [];
+        const img = [];
+        const explanation = [];
+        for(let k=0;k<N;k++) {
+            realSum = 0;
+            imgSum = 0;
+            step = [];
+            for(let n=0;n<N;n++) {
+                re = at[n]*Math.cos(2*Math.PI*k*n/N).toFixed(2);
+                im = -(at[n]*Math.sin(2*Math.PI*k*n/N).toFixed(2));
+                step.push(Math.round(re) + "+ " + "i" + "(" + Math.round(im) + ")");
+                realSum += re;
+                imgSum += im;
             }
-            const magResp = [];
-            const phResp = [];
-            for(let j=0; j<N; j++) {
-                magResp.push(Number(Math.sqrt(Math.pow(real[j],2) + Math.pow(img[j],2)).toFixed(2)));
-                ph = Number((Math.atan(img[j]/real[j])*180/Math.PI).toFixed(2));
-                if (real[j]>=0 & img[j]>=0) {
-                    phResp.push(ph);
-                } else if (real[j]<0 & img[j]<0) {
-                    phResp.push(ph-180);
-                } else {
-                    phResp.push(ph + 180);
-                }
+            explanation.push(step);
+            real.push(realSum);
+            img.push(imgSum);
+            if(imgSum<0) {
+                ak.push(String(Math.round(realSum)) + String(Math.round(imgSum)) + "i");
+            } else if(imgSum>0) {
+                ak.push(Math.round(realSum) + "+" + Math.round(imgSum) + "i");
+            } else {
+                ak.push(Math.round(realSum));
             }
-            document.getElementById("resp").innerText=ak;
-            const xyMagValues = [];
-            for(let j=0; j<N; j++) {
-                xyMagValues.push({x:j,y:magResp[j]});
+            //ak.push(Math.round(realSum) + "+ " + "i" + "(" + Math.round(imgSum) + ")");
+            
+        }
+        const magResp = [];
+        const phResp = [];
+        for(let j=0; j<N; j++) {
+            magResp.push(Number(Math.sqrt(Math.pow(real[j],2) + Math.pow(img[j],2)).toFixed(2)));
+            ph = Number((Math.atan(img[j]/real[j])*180/Math.PI).toFixed(2));
+            if (real[j]>=0 & img[j]>=0) {
+                phResp.push(ph);
+            } else if (real[j]<0 & img[j]<0) {
+                phResp.push(ph-180);
+            } else {
+                phResp.push(ph + 180);
             }
-            new Chart("magResp", {
-                type: "scatter",
-                data: {
-                    datasets: [{
-                        pointRadius: 4,
-                        pointBackgroundColor: "rgb(0,0,255)",
-                        data: xyMagValues
-                    }]
-                },
-                options: {
-                    legend: {display: false}
-                }
-            });
+        }
+        document.getElementById("resp").innerText= "The DFT sequence is : " + ak;
+        document.getElementById("exp").innerHTML="";
 
-            const xyPhValues = [];
-            for(let j=0; j<N; j++) {
-                xyPhValues.push({x:j,y:phResp[j]});
+        var tr = document.createElement('tr');
+        var str ='<th>X[k]\\x[n]</th>';
+        for(let i=0;i<N;i++) {
+            str+=`<th> n = ${i}</th>`;
+            tr.innerHTML=str;
+        }
+        document.getElementById("exp").appendChild(tr);
+        for(let i=0;i<N;i++) {
+            var tr = document.createElement('tr');
+            str=`<td> k = ${i}</td>`;
+            for(let j=0;j<N;j++) {
+                str += `<td> ${explanation[i][j]}</td>`;
+                tr.innerHTML=str;
             }
-            new Chart("phResp", {
-                type: "scatter",
-                data: {
-                    datasets: [{
-                        pointRadius: 4,
-                        pointBackgroundColor: "rgb(0,0,255)",
-                        data: xyPhValues
-                    }]
-                },
-                options: {
-                    legend: {display: false}
-                }
-            });
-            document.getElementById("magResp").style.display ="block";
-            document.getElementById("mag-title").style.display ="block";
-            document.getElementById("phResp").style.display ="block";
-            document.getElementById("ph-title").style.display ="block";
+            document.getElementById("exp").appendChild(tr);
+        }
+            document.getElementById("exp").innerHTML += `</tr>`
+        const xyMagValues = [];
+        for(let j=0; j<N; j++) {
+            xyMagValues.push({x:j,y:magResp[j]});
+        }
+        new Chart("magResp", {
+            type: "scatter",
+            data: {
+                datasets: [{
+                    pointRadius: 4,
+                    pointBackgroundColor: "rgb(0,0,255)",
+                    data: xyMagValues
+                }]
+            },
+            options: {
+                legend: {display: false}
+            }
+        });
+
+        const xyPhValues = [];
+        for(let j=0; j<N; j++) {
+            xyPhValues.push({x:j,y:phResp[j]});
+        }
+        new Chart("phResp", {
+            type: "scatter",
+            data: {
+                datasets: [{
+                    pointRadius: 4,
+                    pointBackgroundColor: "rgb(0,0,255)",
+                    data: xyPhValues
+                }]
+            },
+            options: {
+                legend: {display: false}
+            }
+        });
+        document.getElementById("magResp").style.display ="block";
+        document.getElementById("mag-title").style.display ="block";
+        document.getElementById("phResp").style.display ="block";
+        document.getElementById("ph-title").style.display ="block";
 
         }
     </script>
