--- a/IDFT.html
+++ b/IDFT.html
@@ -10,20 +10,19 @@
 </head>
 <body>
     <div class="main">
-        <div class="theory">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore cupiditate voluptatibus excepturi, laboriosam cumque accusamus suscipit nam officiis voluptas ipsa error. Officiis, vel doloremque explicabo impedit vero dolores voluptatibus. Temporibus.
-            The Lorem ipsum text is derived from sections 1.10.32 and 1.10.33 of Cicero's 'De finibus bonorum et malorum'.[7][8] The physical source may have been the 1914 Loeb Classical Library edition of De finibus, where the Latin text, presented on the left-hand (even) pages, breaks off on page 34 with "Neque porro quisquam est qui do-" and continues on page 36 with "lorem ipsum ...", suggesting that the galley type of that page was mixed up to make the dummy text seen today.[1]
-
-The discovery of the text's origin is attributed to Richard McClintock, a Latin scholar at Hampden–Sydney College. McClintock connected Lorem ipsum to Cicero's writing sometime before 1982 while searching for instances of the Latin word consectetur, which was rarely used in classical literature.[2] McClintock first published his discovery in a 1994 letter to the editor of Before & After magazine, contesting the editor's earlier claim that Lorem ipsum held no meaning.[2]
-
-The relevant section of Cicero as printed in the source is reproduced below with fragments used in Lorem ipsum highlighted. Letters in brackets were added to Lorem ipsum and were not present in the source text:
-
-[32] Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum[d] exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? [D]Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? [33] At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
-
-What follows is H. Rackham's translation, as printed in the Loeb Classical Library edition, with words at least partially represented in Lorem ipsum highlighted:[8]
-
-[32] But I must explain to you how all this mistaken idea of reprobating pleasure and extolling pain arose. To do so, I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure? [33] On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammeled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.
-
-See also
+        <div class="container">
+            <div class="theory">
+                <h2 style="text-align: center;"> Inverse Discrete Fourier Transform</h2><br>
+                <p> An inverse DFT is a Fourier series, using the DTFT samples as coefficients of complex sinusoids at the corresponding DTFT frequencies. It has the same sample-values as the original input sequence.</p>
+                <p>The discrete Fourier transform is an invertible, linear transformation</p>
+                <p><b>F</b>:C<sup>N</sup> --> C<sup>N</sup></p>
+                <p>with <b>C</b> denoting the set of complex numbers. Its inverse is known as Inverse Discrete Fourier Transform (IDFT). In other words, for any <b>N</b>>0, an N-dimensional complex vector has a DFT and an IDFT which are in turn N-dimensional complex vectors.</p>
+                <p>The inverse transform is given by:</p>
+                <img src="assets/IDFT_formula.svg" alt="IDFT formula" class="mx-auto d-block"><br><br>
+                <p>The step-by-step values for the provided input is shown below :</p>
+                <table id="exp">
+                </table><br><br>
+            </div>
         </div>
         <div class="interface-section">
             <div class="container pt-2 input-block">
@@ -49,15 +48,44 @@ See also
                 dftSequence.push(math.complex(a[i]));
             }
             const idftSequence = [];
+            const explanation = [];
             for(let n=0; n<N; n++){
                 realSum = 0;
+                step = [];
                 for(let k=0; k<N; k++) {
                     mul = math.multiply(dftSequence[k],String(Math.cos(2*Math.PI*k*n/N)) + "+" + String(Math.sin(2*Math.PI*k*n/N)) + "i");
                     realSum += Number(mul["re"]);
+                    if(Number(mul['im'])<0) {
+                        step.push(mul["re"].toFixed(2) + mul['im'].toFixed(2) + "i");
+                    } else if(Number(mul['im'])>0) {
+                        step.push(mul["re"].toFixed(2) + "+" + mul['im'].toFixed(2) + "i");
+                    } else {
+                        step.push(mul["re"].toFixed(2));
+                    }
                 }
+                explanation.push(step);
                 idftSequence.push(Math.round(realSum/N));
             }
             document.getElementById("resp").innerText = "The IDFT Sequence is: " + idftSequence;
+            document.getElementById("exp").innerHTML="";
+
+        var tr = document.createElement('tr');
+        var str ='<th>x[n]\\X[k]</th>';
+        for(let i=0;i<N;i++) {
+            str+=`<th> k = ${i}</th>`;
+            tr.innerHTML=str;
+        }
+        document.getElementById("exp").appendChild(tr);
+        for(let i=0;i<N;i++) {
+            var tr = document.createElement('tr');
+            str=`<td> n = ${i}</td>`;
+            for(let j=0;j<N;j++) {
+                str += `<td> ${explanation[i][j]}</td>`;
+                tr.innerHTML=str;
+            }
+            document.getElementById("exp").appendChild(tr);
+        }
+            document.getElementById("exp").innerHTML += `</tr>`
 
             const xyValues = [];
             for(let j=0; j<N; j++) {
