Added cross and auto correlation

--- a/CircularConvolutionUsingDFT&IDFT.html
+++ b/CircularConvolutionUsingDFT&IDFT.html
@@ -12,7 +12,7 @@
     <div class="main">
         <div class="container">
             <div class="theory">
-                <h2 style="text-align: center;"> <u>Circular Convolution Using DFT and IDFT</u></h2><br>
+                <h2 style="text-align: center;"> Circular Convolution Using DFT and IDFT</h2><br>
                 <p>The convolution theorem for the discrete-time Fourier transform (DTFT) indicates that a convolution of two sequences can be obtained as the inverse transform of the product of the individual transforms. An important simplification occurs when one of sequences is N-periodic, denoted here by y<sub>N</sub> because DTFT{y<sub>N</sub>} is non-zero at only discrete frequencies, and therefore so is its product with the continuous function DTFT{x}  That leads to a considerable simplification of the inverse transform.</p>
                 <img src="assets/ccdi-1.svg" alt="..." class="mx-auto d-block"><br>
                 <p>Then the convolution can be written as:</p>
