--- a/LinearConvolution.html
+++ b/LinearConvolution.html
@@ -12,7 +12,7 @@
     <div class="main">
         <div class="container">
             <div class="theory">
-                <h2 style="text-align: center;"> Linear Convolution</h2><br>
+                <h2 style="text-align: center;">Linear Convolution</h2><br>
                 <p>A key concept often introduced to those pursuing electronics engineering is Linear Convolution. This is a crucial component of Digital Signal Processing and Signals and Systems. Keeping general interest and academic implications in mind, this article introduces the concept of Convolution.</p>
                 <p><strong>Convolution:</strong> When speaking purely mathematically, convolution is the process by which one may compute the overlap of two graphs. In fact, convolution is also interpreted as the area shared by the two graphs over time. Metaphorically, it is a blend between the two functions as one passes over the other. So, given two functions F(n) and G(n), the convolution of the two is expressed and given by the following mathematical expression:</p>
                 <h5 style="text-align: center;">y(n)= ∑<sub>k</sub> f(k)g(n−k)= ∑<sub>k</sub> g(k)f(n−k)</h5>
@@ -168,7 +168,7 @@
                 }
                 z.push(sum);
             }
-            document.getElementById("resp").innerText = "The Circular Convolution output is: " + z2;
+            document.getElementById("resp").innerText = "The Linear Convolution output is: " + z;
             
             
             var tr = document.createElement('tr');
