--- a/LinearConvolutionUsingDFT&IDFT.html
+++ b/LinearConvolutionUsingDFT&IDFT.html
@@ -12,7 +12,7 @@
     <div class="main">
         <div class="container">
             <div class="theory">
-                <h2 style="text-align: center;"> <u>Linear Convolution Using DFT and IDFT</u></h2><br>
+                <h2 style="text-align: center;"> Linear Convolution Using DFT and IDFT</h2><br>
                 <p>Using simple words it is said that the linear convolution of two sequences can be obtained as the inverse transform of the product of the individual transforms.</p>
                 <h4><strong>Explanation:</strong></h4>
                 <ul>
