--- a/CircularConvolution.html
+++ b/CircularConvolution.html
@@ -12,7 +12,7 @@
     <div class="main">
         <div class="container">
             <div class="theory">
-                <h2 style="text-align: center;"> <u>Circular Convolution</u></h2><br>
+                <h2 style="text-align: center;"> Circular Convolution</h2><br>
                 <p><strong>Circular convolution</strong>, also known as <strong>cyclic convolution</strong>, is a special case of <strong>periodic convolution</strong>, which is the convolution of two periodic functions that have the same period. Periodic convolution arises, for example, in the context of the discrete-time Fourier transform (DTFT). In particular, the DTFT of the product of two discrete sequences is the periodic convolution of the DTFTs of the individual sequences. And each DTFT is a periodic summation of a continuous Fourier transform function (see DTFT § Definition). Although DTFTs are usually continuous functions of frequency, the concepts of periodic and circular convolution are also directly applicable to discrete sequences of data. In that context, circular convolution plays an important role in maximizing the efficiency of a certain kind of common filtering operation.</p>
                 <h4><strong>Circular convolution:</strong></h4>
                 <p>The periodic convolution of two T-periodic functions, h<sub>T</sub>(t) and x<sub>T</sub>(t) can be defined as:</p>
